add stuff for syria pump

--- a/packages/apps/campaign/src/pages/create/screens/Scenarios.module.less
+++ b/packages/apps/campaign/src/pages/create/screens/Scenarios.module.less
@@ -70,6 +70,9 @@
 .operation-northern-shield {
 	background-image: url("./images/operation-northern-shield.jpg");
 }
+.operation-syria-pump {
+	background-image: url("./images/operation-northern-shield.jpg");
+}
 
 .coming-soon {
 	position: absolute;
